WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255300
[iOS] Pan gestures immediately after tap do not scroll a page with an unresponsive viewport
https://bugs.webkit.org/show_bug.cgi?id=255300
Summary
[iOS] Pan gestures immediately after tap do not scroll a page with an unrespo...
Wenson Hsieh
Reported
2023-04-11 13:08:39 PDT
rdar://106010038
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-04-11 13:22:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12622
EWS
Comment 2
2023-04-11 18:57:51 PDT
Committed
262853@main
(f9672dbf09d9): <
https://commits.webkit.org/262853@main
> Reviewed commits have been landed. Closing PR #12622 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug